[QMZEN](replace): replace IT敲门砖 into QMZIT

--- a/coming-soon/itman-coming-soon.html
+++ b/coming-soon/itman-coming-soon.html
@@ -14,7 +14,7 @@
     gtag('config', 'UA-118288013-1');
 </script>
 
-    <title>IT敲门砖 - 即将上线课程 - 帮助更多的澳洲IT留学生找到好工作</title>
+    <title>QMZIT - 即将上线课程 - 帮助更多的澳洲IT留学生找到好工作</title>
 
 <link rel="icon" type="image/png" href="images/favicon.png">
 
@@ -66,7 +66,7 @@
          </li>
       </ul>
       <div class="spacenotify mid">
-        <p>该课程的内容为IT敲门砖2019更新计划的一部分，我们正在抓紧内容的制作。
+          <p>该课程的内容为QMZIT2019更新计划的一部分，我们正在抓紧内容的制作。
             <br>在这里订阅我们的邮件列表或进入QQ群716553693
             <br>耐心等待 :)
             <br>你也可以翻看以往的<a href="https://www.qiaomenzhuan.com.au/itman-foundation-course.html" style="color: rgb(249,181,71)">求职精品课程</a></p>
@@ -96,7 +96,7 @@
   
   <div class="spacefooter">
     <div class="container">
-      <p> &copy; 2019 IT敲门砖 - <a href="https://itman.design" style="color: rgb(255,255,255)">iTMan旗下的教育品牌</a></p>
+        <p> &copy; 2019 QMZIT - <a href="https://itman.design" style="color: rgb(255,255,255)">iTMan旗下的教育品牌</a></p>
     </div>
     <div class="clear"></div>
   </div>
