--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
 
-        <title>IT敲门砖 - 帮助更多的澳洲IT留学生找到好工作</title>
+        <title>QMZIT - 帮助更多的澳洲IT留学生找到好工作</title>
 
         <!-- Bootstrap -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -117,7 +117,7 @@
                                     <!--</ul>-->
                                 </li>
                                 <li>
-                                    <a href="about.html"><i class="fa fa-info"></i> 关于IT敲门砖</a>
+                                    <a href="about.html"><i class="fa fa-info"></i> 关于QMZIT</a>
                                 </li>
                             </ul>
                         </div>
@@ -147,9 +147,9 @@
                                 <div class="padding-lg padding-md-topbottom-null">
                                     <h3 class="big white margin-bottom-small">IT 敲门砖 <br> 助力澳洲IT留学生找到好工作</h3>
                                     <p class="heading left white">
-                                        IT敲门砖，提供专业的澳洲IT面试培训
+                                        QMZIT，提供专业的澳洲IT面试培训
                                         <br> 由澳洲一线资深IT工程师坐镇，联合大学王牌讲师，一起最短时间提升你面试技能
-                                        <br> 不管你是刚毕业，还是转行IT，又或者是想入行不知道从何做起，加入IT敲门砖
+                                        <br> 不管你是刚毕业，还是转行IT，又或者是想入行不知道从何做起，加入QMZIT
                                         <br> 让你由IT小白迅速成为Offer收割机，斩获第一份工作，轻松移民+5分</p>
                                     <a href="https://www.youtube.com/embed/I4_3t1hVqYY" class="btn-pro white z-index">点击观看视频介绍 </a>
                                 </div>
@@ -223,7 +223,7 @@
                                     <p>无IT基础，或IT基础薄弱，不系统, 转行IT想拿移民加分<br>
                                         希望求职澳洲一线IT大企业, 面试经验少或无面试经验，不知道与面试官如何正确的沟通和展现自己<br>
                                         网上练习题目那么多，不知道该从哪些题开始准备...<br>
-                                        这些统统都不是问题，让IT敲门砖来助你一臂之力！
+                                        这些统统都不是问题，让QMZIT来助你一臂之力！
                                     </p>
                                     <a href="itman-foundation-course.html" class="btn-simple">详情猛戳这里</a>
                                 </div>
@@ -270,7 +270,7 @@
                             <div class="col-md-12 padding-leftright-null text-center">
                                 <h2 class="margin-bottom-null title">近期直播课程</h2>
                                 <div class="padding-md">
-                                    <p class="heading margin-bottom">IT敲门砖精选就业直通班，为你扫除面试中遇到的一切障碍，顺利成为一名实打实的IT白领</p>
+                                    <p class="heading margin-bottom">QMZIT精选就业直通班，为你扫除面试中遇到的一切障碍，顺利成为一名实打实的IT白领</p>
                                 </div>
                             </div>
                             <div class="col-md-12">
@@ -384,8 +384,9 @@
                             <img src="assets/img/logo/qiaomenzhuan_logo_v2_white.png" class="normal" alt="logo">
                             <img src="assets/img/logo/qiaomenzhuan_logo_v2_white@2x.png" class="retina" alt="logo">
                         </div>
-                        <p class="grey-light">IT敲门砖 - 帮助更多的澳洲IT留学生找到好工作。 我们提供专业的澳洲IT面试培训, 由澳洲一线资深IT工程师坐镇，联合大学王牌讲师，一起最短时间提升你面试技能
-                            不管你是刚毕业，还是转行IT，又或者是想入行不知道从何做起，加入IT敲门砖，让你由IT小白迅速成为Offer收割机，斩获第一份工作，轻松移民+5分。
+                        <p class="grey-light">QMZIT - 帮助更多的澳洲IT留学生找到好工作。 我们提供专业的澳洲IT面试培训,
+                            由澳洲一线资深IT工程师坐镇，联合大学王牌讲师，一起最短时间提升你面试技能
+                            不管你是刚毕业，还是转行IT，又或者是想入行不知道从何做起，加入QMZIT，让你由IT小白迅速成为Offer收割机，斩获第一份工作，轻松移民+5分。
                         </p>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
@@ -418,7 +419,7 @@
                     </div>
                 </div>
                 <div class="copy col-md-12 padding-left-null">
-                    &copy; 2019 IT敲门砖 -  iTMan旗下的教育品牌 <a href="https://itman.design">iTMan</a>
+                    &copy; 2019 QMZIT - iTMan旗下的教育品牌 <a href="https://itman.design">iTMan</a>
                     <a href="#main-wrap" class="anchor" id="backtotop">返回至页首</a>
                 </div>
             </footer>
