--- a/itman-foundation-course.html
+++ b/itman-foundation-course.html
@@ -34,7 +34,7 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
 
-        <title>IT敲门砖 - 求职必修课 - 帮助更多的澳洲IT留学生找到好工作</title>
+        <title>QMZIT - 求职必修课 - 帮助更多的澳洲IT留学生找到好工作</title>
 
         <!-- Bootstrap -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -117,7 +117,7 @@
                                     <!--</ul>-->
                                 </li>
                                 <li>
-                                    <a href="about.html"><i class="fa fa-info"></i> 关于IT敲门砖</a>
+                                    <a href="about.html"><i class="fa fa-info"></i> 关于QMZIT</a>
                                 </li>
                             </ul>
                         </div>
@@ -148,7 +148,7 @@
                                     无IT基础，或IT基础薄弱，不系统, 转行IT想拿移民加分. <br>
                                     希望求职澳洲一线IT大企业, 面试经验少或无面试经验，不知道与面试官如何正确的沟通和展现自己 <br>
                                     网上练习题目那么多，不知道该从哪些题开始准备... <br>
-                                    这些统统都不是问题，让IT敲门砖来助你一臂之力！
+                                    这些统统都不是问题，让QMZIT来助你一臂之力！
                                 </p>
                                 <br>
                                 <p class="heading white">
@@ -586,7 +586,7 @@
                     </div>
 
                     <div class="row" style="padding-bottom: 40px">
-                        <h3 class="section-title text-center" style="font-weight: 600;">为什么选择IT敲门砖</h3>
+                        <h3 class="section-title text-center" style="font-weight: 600;">为什么选择QMZIT</h3>
                         <br>
 
                         <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
@@ -605,8 +605,9 @@
                             <img src="assets/img/logo/qiaomenzhuan_logo_v2_white.png" class="normal" alt="logo">
                             <img src="assets/img/logo/qiaomenzhuan_logo_v2_white@2x.png" class="retina" alt="logo">
                         </div>
-                        <p class="grey-light">IT敲门砖 - 帮助更多的澳洲IT留学生找到好工作。 我们提供专业的澳洲IT面试培训, 由澳洲一线资深IT工程师坐镇，联合大学王牌讲师，一起最短时间提升你面试技能
-                            不管你是刚毕业，还是转行IT，又或者是想入行不知道从何做起，加入IT敲门砖，让你由IT小白迅速成为Offer收割机，斩获第一份工作，轻松移民+5分。
+                        <p class="grey-light">QMZIT - 帮助更多的澳洲IT留学生找到好工作。 我们提供专业的澳洲IT面试培训,
+                            由澳洲一线资深IT工程师坐镇，联合大学王牌讲师，一起最短时间提升你面试技能
+                            不管你是刚毕业，还是转行IT，又或者是想入行不知道从何做起，加入QMZIT，让你由IT小白迅速成为Offer收割机，斩获第一份工作，轻松移民+5分。
                         </p>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
@@ -639,7 +640,7 @@
                     </div>
                 </div>
                 <div class="copy col-md-12 padding-left-null">
-                    &copy; 2019 IT敲门砖 -  iTMan旗下的教育品牌 <a href="https://itman.design">iTMan</a>
+                    &copy; 2019 QMZIT - iTMan旗下的教育品牌 <a href="https://itman.design">iTMan</a>
                     <a href="#main-wrap" class="anchor" id="backtotop">返回至页首</a>
                 </div>
             </footer>
