--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>IT敲门砖 - 求职必修课 - 帮助更多的澳洲IT留学生找到好工作</title>
+    <title>QMZIT - 求职必修课 - 帮助更多的澳洲IT留学生找到好工作</title>
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -107,7 +107,7 @@
                             <!--</ul>-->
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-info"></i> 关于IT敲门砖</a>
+                            <a href="#"><i class="fa fa-info"></i> 关于QMZIT</a>
                         </li>
                     </ul>
                 </div>
@@ -132,7 +132,7 @@
             <ul class="slides">
                 <li style="background-image: url(assets/img/about-bg.jpg); width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;" class="flex-active-slide">
                     <div class="text text-center">
-                        <h1 class="white margin-bottom-small">关于 IT敲门砖</h1>
+                        <h1 class="white margin-bottom-small">关于 QMZIT</h1>
                         <p class="heading white">
                             帮助更多的澳洲IT留学生找到好工作 <br>
                             我们的团队由澳洲一线资深IT工程师和八大名校王牌老师组成 <br>
@@ -161,12 +161,12 @@
                     <ul class="timeline">
                         <li>
                             <div class="content">
-                                <p>IT敲门砖，联合澳洲一线资深IT工程师，八大名校金牌老师，一起为IT留学生们打造专业的澳洲IT面试培训课程。力求最短时间提升你面试技能，帮助留学生斩获第一份工作。</p>
+                                <p>QMZIT，联合澳洲一线资深IT工程师，八大名校金牌老师，一起为IT留学生们打造专业的澳洲IT面试培训课程。力求最短时间提升你面试技能，帮助留学生斩获第一份工作。</p>
                             </div>
                             <div class="timeline-badge"></div>
                             <div class="title">
                                 <h3>2019</h3>
-                                <p class="heading grey">IT敲门砖 对公众开放</p>
+                                <p class="heading grey">QMZIT 对公众开放</p>
                             </div>
                         </li>
                         <li>
@@ -176,7 +176,7 @@
                             <div class="timeline-badge"></div>
                             <div class="title">
                                 <h3>2017</h3>
-                                <p class="heading grey">IT敲门砖 课程改革和升级</p>
+                                <p class="heading grey">QMZIT 课程改革和升级</p>
                             </div>
                         </li>
                         <li>
@@ -186,12 +186,12 @@
                             <div class="timeline-badge"></div>
                             <div class="title">
                                 <h3>2016</h3>
-                                <p class="heading grey">IT敲门砖 助力大学，服务学生</p>
+                                <p class="heading grey">QMZIT 助力大学，服务学生</p>
                             </div>
                         </li>
                         <li>
                             <div class="content">
-                                <p>IT敲门砖以私人定制的形式，帮助IT留学生们拿到一线企业实习经验，最后斩获工作。</p>
+                                <p>QMZIT以私人定制的形式，帮助IT留学生们拿到一线企业实习经验，最后斩获工作。</p>
                             </div>
                             <div class="timeline-badge"></div>
                             <div class="title">
@@ -222,8 +222,8 @@
                     <img src="assets/img/logo/qiaomenzhuan_logo_v2_white.png" class="normal" alt="logo">
                     <img src="assets/img/logo/qiaomenzhuan_logo_v2_white@2x.png" class="retina" alt="logo">
                 </div>
-                <p class="grey-light">IT敲门砖 - 帮助更多的澳洲IT留学生找到好工作。 我们提供专业的澳洲IT面试培训, 由澳洲一线资深IT工程师坐镇，联合大学王牌讲师，一起最短时间提升你面试技能
-                    不管你是刚毕业，还是转行IT，又或者是想入行不知道从何做起，加入IT敲门砖，让你由IT小白迅速成为Offer收割机，斩获第一份工作，轻松移民+5分。
+                <p class="grey-light">QMZIT - 帮助更多的澳洲IT留学生找到好工作。 我们提供专业的澳洲IT面试培训, 由澳洲一线资深IT工程师坐镇，联合大学王牌讲师，一起最短时间提升你面试技能
+                    不管你是刚毕业，还是转行IT，又或者是想入行不知道从何做起，加入QMZIT，让你由IT小白迅速成为Offer收割机，斩获第一份工作，轻松移民+5分。
                 </p>
             </div>
             <div class="col-xs-6 col-sm-3 col-md-2">
@@ -256,7 +256,7 @@
             </div>
         </div>
         <div class="copy col-md-12 padding-left-null">
-            &copy; 2019 IT敲门砖 -  iTMan旗下的教育品牌 <a href="https://itman.design">iTMan</a>
+            &copy; 2019 QMZIT - iTMan旗下的教育品牌 <a href="https://itman.design">iTMan</a>
             <a href="#main-wrap" class="anchor" id="backtotop">返回至页首</a>
         </div>
     </footer>
