[QMZEN](replace): replace iTMan旗下的教育品牌 into an iTMan's education brand

--- a/about.html
+++ b/about.html
@@ -256,7 +256,7 @@
             </div>
         </div>
         <div class="copy col-md-12 padding-left-null">
-            &copy; 2019 QMZIT - iTMan旗下的教育品牌 <a href="https://itman.design">iTMan</a>
+            &copy; 2019 QMZIT - an iTMan's education brand <a href="https://itman.design">iTMan</a>
             <a href="#main-wrap" class="anchor" id="backtotop">返回至页首</a>
         </div>
     </footer>
