--- a/coming-soon/itman-coming-soon.html
+++ b/coming-soon/itman-coming-soon.html
@@ -14,7 +14,7 @@
     gtag('config', 'UA-118288013-1');
 </script>
 
-    <title>QMZIT - 即将上线课程 - 帮助更多的澳洲IT留学生找到好工作</title>
+    <title>QMZIT - Coming Soon - Help IT Students Get First Job in Australia </title>
 
 <link rel="icon" type="image/png" href="images/favicon.png">
 
@@ -96,7 +96,7 @@
   
   <div class="spacefooter">
     <div class="container">
-        <p> &copy; 2019 QMZIT - <a href="https://itman.design" style="color: rgb(255,255,255)">iTMan旗下的教育品牌</a></p>
+        <p> &copy; 2019 QMZIT - <a href="https://itman.design" style="color: rgb(255,255,255)">an iTMan's education brand</a></p>
     </div>
     <div class="clear"></div>
   </div>
