[QMZEN](translate): translate coming soon page

--- a/coming-soon/itman-coming-soon.html
+++ b/coming-soon/itman-coming-soon.html
@@ -66,10 +66,10 @@
          </li>
       </ul>
       <div class="spacenotify mid">
-          <p>该课程的内容为QMZIT2019更新计划的一部分，我们正在抓紧内容的制作。
-            <br>在这里订阅我们的邮件列表或进入QQ群716553693
-            <br>耐心等待 :)
-            <br>你也可以翻看以往的<a href="https://www.qiaomenzhuan.com.au/itman-foundation-course.html" style="color: rgb(249,181,71)">求职精品课程</a></p>
+          <p>The content of these courses is part of the QMZIT 2019 elite program and we are working on the production of the content.
+            <br>You could subscribe to our mailing list here or join our whatsapp group
+            <br>Please be patient :)
+            <br>You are always welcome to checkout previous courses<a href="https://www.qiaomenzhuan.com.au/itman-foundation-course.html" style="color: rgb(249,181,71)">Core Courses</a></p>
           <div class="field">
          <div id="result"></div>
 
@@ -77,10 +77,10 @@
            <div class="form">
            <form action="https://design.us17.list-manage.com/subscribe/post?u=03e16b08d9abb3d480275e687&amp;id=d6aea0210a" method="post" novalidate>
               <div class="field">
-                    <input type="email" placeholder="你的邮箱地址" required name="EMAIL" id="EMAIL" />
+                    <input type="email" placeholder="Your email" required name="EMAIL" id="EMAIL" />
                       <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_03e16b08d9abb3d480275e687_a86430d427" tabindex="-1" value=""></div>
-                    <input type="submit" value="点我订阅" name="subscribe" />
+                    <input type="submit" value="click me to subscribe" name="subscribe" />
               </div>
           </form>
           </div>
@@ -125,7 +125,7 @@
 <script type="text/javascript">
 $(document).ready(function() { 
 	$('.countdown_2').downCount({
-		date: '08/30/2019 23:00:00',
+		date: '07/30/2019 23:00:00',
   offset: +1
 	});
 });
