[QMZEN](replace): replace 帮助更多的澳洲IT留学生找到好工作

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>QMZIT - 求职必修课 - 帮助更多的澳洲IT留学生找到好工作</title>
+    <title>QMZIT - 求职必修课 - Help IT Students Get First Job in Australia</title>
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -134,7 +134,7 @@
                     <div class="text text-center">
                         <h1 class="white margin-bottom-small">关于 QMZIT</h1>
                         <p class="heading white">
-                            帮助更多的澳洲IT留学生找到好工作 <br>
+                            Help IT Students Get First Job in Australia <br>
                             我们的团队由澳洲一线资深IT工程师和八大名校王牌老师组成 <br>
                             一起最短时间提升你面试技能</p>
                     </div>
@@ -222,7 +222,7 @@
                     <img src="assets/img/logo/qiaomenzhuan_logo_v2_white.png" class="normal" alt="logo">
                     <img src="assets/img/logo/qiaomenzhuan_logo_v2_white@2x.png" class="retina" alt="logo">
                 </div>
-                <p class="grey-light">QMZIT - 帮助更多的澳洲IT留学生找到好工作。 我们提供专业的澳洲IT面试培训, 由澳洲一线资深IT工程师坐镇，联合大学王牌讲师，一起最短时间提升你面试技能
+                <p class="grey-light">QMZIT - Help IT Students Get First Job in Australia。 我们提供专业的澳洲IT面试培训, 由澳洲一线资深IT工程师坐镇，联合大学王牌讲师，一起最短时间提升你面试技能
                     不管你是刚毕业，还是转行IT，又或者是想入行不知道从何做起，加入QMZIT，让你由IT小白迅速成为Offer收割机，斩获第一份工作，轻松移民+5分。
                 </p>
             </div>
