[QMZEN](translate): translate menu

--- a/index.html
+++ b/index.html
@@ -90,34 +90,34 @@
                         <div class="menu-holder">
                             <ul>
                                 <li class="submenu">
-                                    <a href="javascript:void(0)" class="active-item"><i class="fa fa-tv"></i> 直播课</a>
+                                    <a href="javascript:void(0)" class="active-item"><i class="fa fa-tv"></i>Live Course</a>
                                     <ul class="sub-menu">
-                                        <li><a href="itman-foundation-course.html">求职直通班🔥</a></li>
-                                        <li><a href="itman-iOS-god.html">iOS大神班🔥</a></li>
-                                        <li><a href="itman-ml.html">机器学习大神班🔥</a></li>
-                                        <li><a href="coming-soon/itman-coming-soon.html">UI/UX求职直通班</a></li>
-                                        <li><a href="coming-soon/itman-coming-soon.html">BA求职直通班</a></li>
+                                        <li><a href="itman-foundation-course.html">IT-Foundation🔥</a></li>
+                                        <li><a href="itman-iOS-god.html">iOS Job Ready🔥</a></li>
+                                        <li><a href="itman-ml.html">Machine Learning Job Ready🔥</a></li>
+                                        <li><a href="coming-soon/itman-coming-soon.html">Web Full-Stack Job Ready🔥🔥</a></li>
+                                        <li><a href="coming-soon/itman-coming-soon.html">Business Analytics Job Ready</a></li>
                                     </ul>
                                 </li>
                                 <li class="submenu">
-                                    <a href="javascript:void(0)"><i class="fa fa-graduation-cap"></i> 小课程</a>
+                                    <a href="javascript:void(0)"><i class="fa fa-graduation-cap"></i>Workshop</a>
                                     <ul class="sub-menu">
-                                        <li><a href="coming-soon/itman-coming-soon.html">面试真题</a></li>
-                                        <li><a href="coming-soon/itman-coming-soon.html">面试经验</a></li>
-                                        <li><a href="coming-soon/itman-coming-soon.html">IT移民加分</a></li>
+                                        <li><a href="coming-soon/itman-coming-soon.html">Interview Question</a></li>
+                                        <li><a href="coming-soon/itman-coming-soon.html">Interview Experience</a></li>
+                                        <li><a href="coming-soon/itman-coming-soon.html">IT Skilled Migration</a></li>
                                     </ul>
                                 </li>
                                 <li class="submenu">
-                                    <a href="javascript:void(0)"><i class="fa fa-heart"></i> 1对1</a>
+                                    <a href="javascript:void(0)"><i class="fa fa-heart"></i>Private Tutoring</a>
                                 </li>
                                 <li class="submenu">
-                                    <a href="javascript:void(0)"><i class="fa fa-question-circle"></i> 问答</a>
+                                    <a href="javascript:void(0)"><i class="fa fa-question-circle"></i>Q&A</a>
                                     <!--<ul class="sub-menu">-->
 
                                     <!--</ul>-->
                                 </li>
                                 <li>
-                                    <a href="about.html"><i class="fa fa-info"></i> 关于QMZIT</a>
+                                    <a href="about.html"><i class="fa fa-info"></i> About Us</a>
                                 </li>
                             </ul>
                         </div>
