[QMZEN](translate): translate footer

--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
                                     <a href="javascript:void(0)" class="active-item"><i class="fa fa-tv"></i>Live Course</a>
                                     <ul class="sub-menu">
                                         <li><a href="itman-foundation-course.html">IT-Foundation🔥</a></li>
-                                        <li><a href="itman-iOS-god.html">iOS Job Ready🔥</a></li>
-                                        <li><a href="itman-ml.html">Machine Learning Job Ready🔥</a></li>
-                                        <li><a href="coming-soon/itman-coming-soon.html">Web Full-Stack Job Ready🔥🔥</a></li>
-                                        <li><a href="coming-soon/itman-coming-soon.html">Business Analytics Job Ready</a></li>
+                                        <li><a href="itman-iOS-god.html">iOS Program🔥</a></li>
+                                        <li><a href="itman-ml.html">Machine Learning Program🔥</a></li>
+                                        <li><a href="coming-soon/itman-coming-soon.html">Web Full-Stack Program🔥🔥</a></li>
+                                        <li><a href="coming-soon/itman-coming-soon.html">Business Analytics Program</a></li>
                                     </ul>
                                 </li>
                                 <li class="submenu">
                                     <a href="javascript:void(0)"><i class="fa fa-graduation-cap"></i>Workshop</a>
                                     <ul class="sub-menu">
                                         <li><a href="coming-soon/itman-coming-soon.html">Interview Question</a></li>
-                                        <li><a href="coming-soon/itman-coming-soon.html">Interview Experience</a></li>
+                                        <li><a href="coming-soon/itman-coming-soon.html">Interview Packing</a></li>
                                         <li><a href="coming-soon/itman-coming-soon.html">IT Skilled Migration</a></li>
                                     </ul>
                                 </li>
@@ -147,7 +147,7 @@
                                 <div class="padding-lg padding-md-topbottom-null">
                                     <h3 class="big white margin-bottom-small">QMZ IT <br> Help IT Students Get First Job in Australia</h3>
                                     <p class="heading left white">
-                                        QMZ IT，provide professional Australia IT job ready training
+                                        QMZ IT, provide professional Australia IT job ready training
                                         <br> we are a group of senior/lead engineers from Australian top IT companies and universities
                                         <br> whether you are just graduating, or switching to IT, or want to enter the IT industry but do not know where to start, join QMZ IT
                                         <br> we will help you get your first IT job from 0 to professional</p>
@@ -192,21 +192,21 @@
                                 <div class="text padding-md-bottom-null">
                                     <i class="fa fa-code-fork service"></i>
                                     <h6 class="heading  margin-bottom-extrasmall">Massive practice after each class</h6>
-                                    <p class="margin-bottom-null">No more struggling, all real-world industry project based. What you have been trained is what you will do in your next job</p>
+                                    <p class="margin-bottom-null">No more struggling, all real-world industry projects based. What you have been trained is what you will do in your next job</p>
                                 </div>
                             </div>
                             <div class="col-md-4 padding-leftright-null">
                                 <div class="text padding-md-bottom-null">
                                     <i class="fa fa-commenting-o service"></i>
                                     <h6 class="heading grey margin-bottom-extrasmall">Question & Answer</h6>
-                                    <p class="margin-bottom-null">ensure that each student's questions are answered professionally. Don't worry about which one is the correct answer</p>
+                                    <p class="margin-bottom-null">ensure that each student's questions are answered professionally. No more struggle about which one is the correct answer</p>
                                 </div>
                             </div>
                             <div class="col-md-4 padding-leftright-null">
                                 <div class="text">
                                     <i class="fa fa-users service"></i>
                                     <h6 class="heading  margin-bottom-extrasmall">Find Partners Looking For Job Together</h6>
-                                    <p class="margin-bottom-null">Exclusive VIP group of enrolled students, internal referral, job seeking advise</p>
+                                    <p class="margin-bottom-null">Exclusive VIP group of enrolled students, internal referral, job seeking advises</p>
                                 </div>
                             </div>
                         </div>
@@ -216,7 +216,7 @@
                     <div class="row margin-leftright-null">
                         <div class="col-lg-8 padding-leftright-null">
                             <div data-responsive="parent-height" data-responsive-id="adv" class="text">
-                                <h2 class="margin-bottom-null title left">Live Broadcast Course - July</h2>
+                                <h2 class="margin-bottom-null title left">Live Broadcast Course</h2>
                                 <div class="padding-onlytop-md">
                                     <h3 class="grey big margin-bottom-small">IT Foundation Course episode 3</h3>
                                     <p class="heading left margin-bottom">course begin in：<span id="count-down"></span></p>
@@ -242,19 +242,19 @@
                     <div class="row margin-leftright-null">
                         <div class="col-md-12 padding-leftright-null bg-img overlay transparent responsive" style="background-image:url(assets/img/iOS_course.png)">
                             <div class="col-md-6 col-md-offset-6 text text-left padding-bottom-null">
-                                <h2 class="margin-bottom-null title left">Live Broadcast Course - July</h2>
+                                <h2 class="margin-bottom-null title left">Live Broadcast Course</h2>
                                 <div class="padding-onlytop-md">
-                                    <h3 class="big margin-bottom-small grey">iOS Job Ready Program <br> Australia number 1 iOS + industry ready project</h3>
+                                    <h3 class="big margin-bottom-small grey">iOS Job Ready Program <br> Australia first iOS + industry ready project</h3>
                                 </div>
                             </div>
                             <div class="col-md-12 padding-leftright-null">
                                 <div class="col-md-6 col-md-offset-6 padding-leftright-null">
                                     <div class="text">
                                         <p class="heading margin-bottom-extrasmall left">
-                                            Award-winning project oriented, Lead Engineer from Microsoft as instructor<br>
+                                            Award-winning project oriented, Lead engineer from Microsoft as instructor<br>
                                             from 0 to AppStore ready, from 0 to job ready, 10 weeks intensive training, <br>
                                             by completing this program, you will become an industry job ready candidate<br>
-                                            what you learn during this program is 100% what you will be doing in your first job.<br>
+                                            what you will learn during this program is 100% what you will be doing in your first job.<br>
                                         </p>
                                         <br>
                                         <a href="itman-iOS-god.html" class="btn-simple">program info</a>
@@ -384,37 +384,37 @@
                             <img src="assets/img/logo/qiaomenzhuan_logo_v2_white.png" class="normal" alt="logo">
                             <img src="assets/img/logo/qiaomenzhuan_logo_v2_white@2x.png" class="retina" alt="logo">
                         </div>
-                        <p class="grey-light">QMZIT - Help IT Students Get First Job in Australia。 我们提供专业的澳洲IT面试培训,
-                            由澳洲一线资深IT工程师坐镇，联合大学王牌讲师，一起最短时间提升你面试技能
-                            不管你是刚毕业，还是转行IT，又或者是想入行不知道从何做起，加入QMZIT，让你由IT小白迅速成为Offer收割机，斩获第一份工作，轻松移民+5分。
+                        <p class="grey-light">QMZIT - Help IT Students Get First Job in Australia. We provide professional training program to help IT students from different background find their dream jobs.
+                            We are a team of senior/lead engineers from top IT company in Australia, together with university professors, aiming to train students to be industry ready in 3 months.
+                            whether you are just graduating, or switching to IT, or want to enter the IT industry but do not know where to start, join QMZ IT, to secure your first job.
                         </p>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
-                        <h6 class="heading white margin-bottom-extrasmall">常用链接</h6>
+                        <h6 class="heading white margin-bottom-extrasmall">Site Map</h6>
                         <ul class="sitemap">
-                            <li><a href="">首页</a></li>
-                            <li><a href="">直播课</a></li>
-                            <li><a href="">小课程</a></li>
-                            <li><a href="">1对1</a></li>
-                            <li><a href="about.html">关于敲门砖</a></li>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Live Broadcast</a></li>
+                            <li><a href="">Workshop</a></li>
+                            <li><a href="">Private Tutoring</a></li>
+                            <li><a href="about.html">About Us</a></li>
                         </ul>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
-                        <h6 class="heading white margin-bottom-extrasmall">社交</h6>
+                        <h6 class="heading white margin-bottom-extrasmall">Social Media</h6>
                         <ul class="info">
-                            <li><i class="fa fa-qq"></i> QQ 1群: <span class="white follow-wechat">716553693 <span class="follow-wechat-popup"><img src="assets/img/logo/qq_1_group.jpeg" /></span> </span></li>
-                            <li><i class="fa fa-qq"></i> QQ 2群: 暂未开放 </li>
+                            <li><i class="fa fa-qq"></i> QQ group 1: <span class="white follow-wechat">716553693 <span class="follow-wechat-popup"><img src="assets/img/logo/qq_1_group.jpeg" /></span> </span></li>
+                            <li><i class="fa fa-qq"></i> QQ group 2: TBC </li>
                         </ul>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4">
-                        <h6 class="heading white margin-bottom-extrasmall">联系我们</h6>
+                        <h6 class="heading white margin-bottom-extrasmall">Contact Us</h6>
                         <ul class="info">
                             <li>
                                 <i class="fa fa-weixin"></i>
-                                微信公众号: <span class="white follow-wechat">it_qiao_men_zhuan <span class="follow-wechat-popup"><img src="assets/img/logo/wechat_qr_code.jpg" /></span> </span>
+                                wechat: <span class="white follow-wechat">it_qiao_men_zhuan <span class="follow-wechat-popup"><img src="assets/img/logo/wechat_qr_code.jpg" /></span> </span>
 
                             </li>
-                            <li><i class="fa fa-envelope-square"></i> 邮箱: <a class="white" href="mailto:alex@itman.design">alex@itman.design</a></li>
+                            <li><i class="fa fa-envelope-square"></i> mail: <a class="white" href="mailto:alex@itman.design">alex@itman.design</a></li>
                         </ul>
                     </div>
                 </div>
