--- a/itman-iOS-god.html
+++ b/itman-iOS-god.html
@@ -975,43 +975,43 @@
                             <img src="assets/img/logo/qiaomenzhuan_logo_v2_white.png" class="normal" alt="logo">
                             <img src="assets/img/logo/qiaomenzhuan_logo_v2_white@2x.png" class="retina" alt="logo">
                         </div>
-                        <p class="grey-light">QMZIT - Help IT Students Get First Job in Australia。 我们提供专业的澳洲IT面试培训,
-                            由澳洲一线资深IT工程师坐镇，联合大学王牌讲师，一起最短时间提升你面试技能
-                            不管你是刚毕业，还是转行IT，又或者是想入行不知道从何做起，加入QMZIT，让你由IT小白迅速成为Offer收割机，斩获第一份工作，轻松移民+5分。
+                        <p class="grey-light">QMZIT - Help IT Students Get First Job in Australia. We provide professional training program to help IT students from different background find their dream jobs.
+                            We are a team of senior/lead engineers from top IT company in Australia, together with university professors, aiming to train students to be industry ready in 3 months.
+                            whether you are just graduating, or switching to IT, or want to enter the IT industry but do not know where to start, join QMZ IT, to secure your first job.
                         </p>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
-                        <h6 class="heading white margin-bottom-extrasmall">常用链接</h6>
+                        <h6 class="heading white margin-bottom-extrasmall">Site Map</h6>
                         <ul class="sitemap">
-                            <li><a href="">首页</a></li>
-                            <li><a href="">直播课</a></li>
-                            <li><a href="">小课程</a></li>
-                            <li><a href="">1对1</a></li>
-                            <li><a href="about.html">关于敲门砖</a></li>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Live Broadcast</a></li>
+                            <li><a href="">Workshop</a></li>
+                            <li><a href="">Private Tutoring</a></li>
+                            <li><a href="about.html">About Us</a></li>
                         </ul>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
-                        <h6 class="heading white margin-bottom-extrasmall">社交</h6>
+                        <h6 class="heading white margin-bottom-extrasmall">Social Media</h6>
                         <ul class="info">
-                            <li><i class="fa fa-qq"></i> QQ 1群: <span class="white follow-wechat">716553693 <span class="follow-wechat-popup"><img src="assets/img/logo/qq_1_group.jpeg" /></span> </span></li>
-                            <li><i class="fa fa-qq"></i> QQ 2群: 暂未开放 </li>
+                            <li><i class="fa fa-qq"></i> QQ group 1: <span class="white follow-wechat">716553693 <span class="follow-wechat-popup"><img src="assets/img/logo/qq_1_group.jpeg" /></span> </span></li>
+                            <li><i class="fa fa-qq"></i> QQ group 2: TBC </li>
                         </ul>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4">
-                        <h6 class="heading white margin-bottom-extrasmall">联系我们</h6>
+                        <h6 class="heading white margin-bottom-extrasmall">Contact Us</h6>
                         <ul class="info">
                             <li>
                                 <i class="fa fa-weixin"></i>
-                                微信公众号: <span class="white follow-wechat">it_qiao_men_zhuan <span class="follow-wechat-popup"><img src="assets/img/logo/wechat_qr_code.jpg" /></span> </span>
+                                wechat: <span class="white follow-wechat">it_qiao_men_zhuan <span class="follow-wechat-popup"><img src="assets/img/logo/wechat_qr_code.jpg" /></span> </span>
 
                             </li>
-                            <li><i class="fa fa-envelope-square"></i> 邮箱: <a class="white" href="mailto:alex@itman.design">alex@itman.design</a></li>
+                            <li><i class="fa fa-envelope-square"></i> mail: <a class="white" href="mailto:alex@itman.design">alex@itman.design</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="copy col-md-12 padding-left-null">
                     &copy; 2019 QMZIT - an iTMan's education brand <a href="https://itman.design">iTMan</a>
-                    <a href="#main-wrap" class="anchor" id="backtotop">返回至页首</a>
+                    <a href="#main-wrap" class="anchor" id="backtotop">Back To Top</a>
                 </div>
             </footer>
             <!--  END Footer. Class fixed for fixed footer  -->
