[QMZEN](translate): translate foundation course

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 <div class="text padding-md-bottom-null">
                                     <i class="fa fa-commenting-o service"></i>
                                     <h6 class="heading grey margin-bottom-extrasmall">Question & Answer</h6>
-                                    <p class="margin-bottom-null">ensure that each student's questions are answered professionally. No more struggle about which one is the correct answer</p>
+                                    <p class="margin-bottom-null">Ensure that each student's questions are answered professionally. No more struggle about which one is the correct answer</p>
                                 </div>
                             </div>
                             <div class="col-md-4 padding-leftright-null">
@@ -244,7 +244,7 @@
                             <div class="col-md-6 col-md-offset-6 text text-left padding-bottom-null">
                                 <h2 class="margin-bottom-null title left">Live Broadcast Course</h2>
                                 <div class="padding-onlytop-md">
-                                    <h3 class="big margin-bottom-small grey">iOS Job Ready Program <br> Australia first iOS + industry ready project</h3>
+                                    <h3 class="big margin-bottom-small grey">iOS Job Ready Program <br> Australia 1st iOS + industry ready project</h3>
                                 </div>
                             </div>
                             <div class="col-md-12 padding-leftright-null">
@@ -420,7 +420,7 @@
                 </div>
                 <div class="copy col-md-12 padding-left-null">
                     &copy; 2019 QMZIT - an iTMan's education brand <a href="https://itman.design">iTMan</a>
-                    <a href="#main-wrap" class="anchor" id="backtotop">返回至页首</a>
+                    <a href="#main-wrap" class="anchor" id="backtotop">Back To Top</a>
                 </div>
             </footer>
             <!--  END Footer. Class fixed for fixed footer  -->
