[QMZEN](translate): translate foundation course

--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
             <ul class="slides">
                 <li style="background-image: url(assets/img/about-bg.jpg); width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;" class="flex-active-slide">
                     <div class="text text-center">
-                        <h1 class="white margin-bottom-small">关于 QMZIT</h1>
+                        <h1 class="white margin-bottom-small">About QMZIT</h1>
                         <p class="heading white">
                             Help IT Students Get First Job in Australia <br>
                             我们的团队由澳洲一线资深IT工程师和八大名校王牌老师组成 <br>
